# MedianQuadtree

./: CMakeLists.txt  README.md
include/: MQT.hpp  MQT2.hpp
include/MQT2/: MQT2.hpp
src/: MQT2.cu  main.cpp
tests/: CMakeLists.txt  tests.cpp
